Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/methodReference/MethodReferenceInConstructorInvocation.out
MethodReferenceInConstructorInvocation.java:20:21: compiler.err.cant.ref.before.ctor.called: super
MethodReferenceInConstructorInvocation.java:24:30: compiler.err.cant.ref.before.ctor.called: super
2 errors
